2005-03-27  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sys/net/if.c (ifioctl): Fixed a compiler warning about 
	types to printf.
	* src/sys/netinet/if_ether.c (in_arpinput): Ditto
	* src/sys/net/if.c: Ditto

2005-03-10	Matt Jerdonek	<maj1224@yahoo.com>

	* cdl/freebsd_net.cdl:
	* src/sys/netinet/in_pcb.c: add option to randomly pick
	source port.  This option is useful when connecting
	through firewalls.

2004-12-24  Motoya Kurotsu  <kurotsu@allied-telesis.co.jp>

	* src/sys/kern/kern_sysctl.c: set mutex_init to one to prevent
	mutex being initialized multiple times.
	
2004-08-18  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ecos/support.c (show_net_times): Removed stats_in_cksum.
	It does not exist in the FreeBSD stack. Pointed out by
	Philip Keller.
	
2004-08-17  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/sys/kern/sockio.c (bsd_bind): Pass a copy of the sa into
	bind so that the "kernel" code does not modify the "user" codes
	version of the socket address.

2004-07-15 Oyvind Harboe <oyvind.harboe@zylin.com>	
	
	*cdl/freebsd_net.cdl:
	*src/ecos/support.c: made memory pools default to current size, 
	but separately controllable from the cdl file. This is useful for 
	systems with tight memory budgets.
	
2004-06-01  Sandeep Kumar  <sandeep@codito.com>

	* tests/sysctl1.c: Call CYG_TEST_EXIT at the end of the test.

2004-05-25  Gary Thomas  <gary@mlbassoc.com>

	* src/sys/netinet/if_ether.c: Clean up some log messages - remove
	extraneous ":" which caused incorrect printouts.

2004-04-30  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/ecos/timeout.c (callout_reset): Clarify assert message on
	expiry date from ages ago and also add comment explaining further.

2004-03-30  Horst Kronstorfer  <horst.kronstorfer@frequentis.com>
 
        * src/sys/kern/uipc_mbuf.c
        * src/ecos/support.c
        * include/sys/mbuf.h: Avoid blocking alloc from (empty) mbuf pool.
        Freed mbufs are never returned to the pool, but to the mbuf